--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.4",
+    "mongoose": ">=7.4.1 <8.0.0",
     "mongoose-unique-validator": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
